--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,6 +80,8 @@
     border: none;
     background-color: transparent;
     cursor: pointer;
+    position: fixed;
+    z-index: 3;
   }
 }
 .header__button .header__image-line {
@@ -100,7 +102,7 @@
   opacity: 0;
   transition: all 0.5s ease;
   visibility: hidden;
-  z-index: 2;
+  z-index: 4;
 }
 .header__popup-container {
   background-color: #F4F4F4;
